--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ main {
 }
 
 section {
-    background: #fff;
+    background: #FFFFFF;
     border-radius: 16px;
     padding: 40px;
     margin-bottom: 40px;
